# wrf_hydro_nwm_public

./: .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  ISSUE_TEMPLATE.md  LICENSE.txt  NEWS.md  README.md  ford-project.md
src/: CMakeLists.txt  Makefile  README.build.md  README.build.txt  compile_offline_Noah.sh  compile_offline_NoahMP.sh  configure  hydro_namelists.json
src/CPL/CLM_cpl/: Makefile  Makefile.cpl  bat2.csh  clm_drv_HYDRO.F  module_clm_HYDRO.F
src/CPL/LIS_cpl/: Makefile  Makefile.cpl  lis_drv_HYDRO.F  module_lis_HYDRO.F
src/CPL/NUOPC_cpl/: CMakeLists.txt  Makefile  WRFHydro_ESMF_Extensions.F90  WRFHydro_NUOPC_Cap.F90  WRFHydro_NUOPC_Flags.F90  WRFHydro_NUOPC_Gluecode.F90
src/CPL/NoahMP_cpl/: CMakeLists.txt  Makefile  hrldas_drv_HYDRO.F  module_hrldas_HYDRO.F
src/CPL/Noah_cpl/: Makefile  hrldas_drv_HYDRO.F  module_hrldas_HYDRO.F
src/CPL/WRF_cpl/: Makefile  Makefile.cpl  module_wrf_HYDRO.F  module_wrf_HYDRO.F90
src/CPL/python_cpl/: CMakeLists.txt  README.md  call_py_fSCA.c  call_python.c  call_python_bind_c.f90  call_python_test_driver.f90  get_weights.py  ml_fSCA.py  py_fSCA_bind_c.f90  python_test_driver.f90  stub_fSCA.f90
src/Data_Rec/: CMakeLists.txt  Makefile  module_RT_data.F  module_namelist.F  rt_include.inc
src/Debug_Utilities/: CMakeLists.txt  Makefile
src/HYDRO_drv/: CMakeLists.txt  Makefile  module_HYDRO_drv.F  module_HYDRO_drv.F90
src/IO/: CMakeLists.txt  Makefile
src/Land_models/Noah/: CMakeLists.txt  Makefile
src/Land_models/NoahMP/: CMakeLists.txt  Makefile
src/MPP/: CMakeLists.txt  CPL_WRF.F  CPL_WRF.F90  Makefile  Makefile.NoahMP  module_mpp_GWBUCKET.F  module_mpp_GWBUCKET.F90  module_mpp_ReachLS.F  mpp_land.F  mpp_land.F90
src/OrchestratorLayer/: CMakeLists.txt  Makefile  config.F90  config.f90
src/Rapid_routing/: hrldas_RAPID_drv.F90  hrldas_RAPID_wrapper.F90  makefile  rapid_arrays.F90  rapid_close_Qfor_file.F90  rapid_close_Qhum_file.F90  rapid_close_Qobs_file.F90  rapid_close_Qout_file.F90  rapid_close_Vlat_file.F90  rapid_create_Qout_file.F90  rapid_create_obj.F90  rapid_destro_obj.F90  rapid_final.F90  rapid_get_Qdam.F90  rapid_hsh_mat.F90  rapid_init.F90  rapid_main.F90  rapid_net_mat.F90  rapid_net_mat_brk.F90  rapid_obs_mat.F90  rapid_open_Qfor_file.F90  rapid_open_Qhum_file.F90  rapid_open_Qobs_file.F90  rapid_open_Qout_file.F90  rapid_open_Vlat_file.F90  rapid_phiroutine.F90  rapid_read_Qfor_file.F90  rapid_read_Qhum_file.F90  rapid_read_Qobs_file.F90  rapid_read_Vlat_file.F90  rapid_read_namelist.F90  rapid_routing.F90  rapid_routing_param.F90  rapid_set_Qext0.F90  rapid_var.F90  rapid_write_Qout_file.F90
src/Routing/: CMakeLists.txt  Makefile  Noah_distr_routing.F  Noah_distr_routing_overland.F  module_GW_baseflow.F  module_HYDRO_io.F  module_HYDRO_io.F90  module_NWM_io.F  module_NWM_io.F90  module_NWM_io_dict.F  module_RT.F  module_RT.F90  module_UDMAP.F  module_channel_routing.F  module_channel_routing.F90  module_gw_gw2d.F  module_lsm_forcing.F  module_lsm_forcing.F90
src/Routing/Diversions/: CMakeLists.txt  module_diversions.F  module_diversions.F90  module_diversions_timeslice.F  module_diversions_timeslice.F90
src/Routing/Overland/: CMakeLists.txt  Makefile
src/Routing/Reservoirs/: CMakeLists.txt  Makefile  module_reservoir.F  module_reservoir_utilities.F
src/Routing/Subsurface/: CMakeLists.txt  Makefile
src/arc/: Makefile.Noah  Makefile.NoahMP  Makefile.mpp  Makefile.seq
src/cmake-modules/: FindNetCDF.cmake
src/deprecated/: README.build.txt  build_install.sh  build_install_theia.sh
src/nudging/: CMakeLists.txt  Makefile  module_nudging_io.F
src/template/HYDRO/: CHANPARM.TBL
src/utils/: CMakeLists.txt  Makefile  module_hydro_stop.F
src/utils/fortglob/: CMakeLists.txt  Makefile
tests/ctests/: CMakeLists.txt  run_cmake_testcase.sh  run_dir_makefile.mk  setup_cmake_testcase.sh  should_fail.f90  should_not_fail.f90
trunk/NDHMS/: .gitignore  .nwm_version  .version  1  @  CMakeLists.txt  Makefile  Makefile.nuopc  README.build  README.build.txt  README.hydro  Readme.beheen  build_install.sh  build_log.txt  compile_nuopc_NoahMP.sh  compile_nuopc_NoahMP.sh.org  compile_offline_Noah.csh  compile_offline_Noah.sh  compile_offline_NoahMP.csh  compile_offline_NoahMP.sh  compile_options.json  configure  hrldas_namelists.json  hydro_namelists.json  link.csh  macros.bak  macros.prev  note.txt  nwm-slurm.job  nwm.md  nwm_doxyfile  out.txt  setEnvar.csh  setEnvar.sh  tagversion.txt
trunk/NDHMS/CLM_cpl/: Makefile  Makefile.cpl  bat2.csh  clm_drv_ndhms.F  module_clm_HYDRO.F  module_clm_ndhms.F
trunk/NDHMS/Data_Rec/: CMakeLists.txt  Makefile  diag_field_include.inc  gw_field_include.inc  lsm_wrf_field.inc  module_LSM_wrf_data.F  module_RT_data.F  module_RT_data.f90  module_gw_gw2d_data.F  module_namelist.F  namelist.inc  rt_include.inc
trunk/NDHMS/Debug_Utilities/: CMakeLists.txt  Makefile  debug_dump_variable.F
trunk/NDHMS/HRLDAS/: user_build_options
trunk/NDHMS/HRLDAS_cpl/: Makefile  Makefile.cpl  hrldas_drv_HYDRO.F  hrldas_drv_ndhms.F  module_hrldas_HYDRO.F  module_hrldas_ndhms.F
trunk/NDHMS/HYDRO_drv/: CMakeLists.txt  Makefile  module_HYDRO_drv.F  module_NDHMS_rt_drv.F
trunk/NDHMS/IO/: Makefile  netcdf_layer.f90
trunk/NDHMS/LIS_cpl/: Makefile  Makefile.cpl  lis_drv_HYDRO.F  lis_drv_ndhms.F  module_lis_HYDRO.F  module_lis_ndhms.F
trunk/NDHMS/MPP/: CMakeLists.txt  CPL_WRF.F  Makefile  hash_routines.cc  hashtable.F  module_ReachLS.F  module_mpp_GWBUCKET.F  module_mpp_ReachLS.F  mpp_land.F
trunk/NDHMS/Main/: Makefile  mainDriver.F
trunk/NDHMS/NDHMS_drv/: Makefile  NDHMS_Noah_lsm_drv.F  NDHMS_rt_drv.F  module_NDHMS_rt_drv.F
trunk/NDHMS/NoahLand/: Makefile  Noah_distributed_v4.0_README.txt  Noah_distributed_v4.2_README.txt  batch_compile.csh  configure  configure.bak
trunk/NDHMS/OrchestratorLayer/: CMakeLists.txt  Makefile  config.f90  groundwater.f90  io_manager.f90  io_netcdf_layer.f90  orchestrator.f90
trunk/NDHMS/Rapid_routing/: RAPID_coupling_new_4km_WRF_hydro.csv  hrldas_RAPID_drv.F90  makefile  makefile.orig  (+13 more)
(+1417 files in other folders)
